// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MapGridRoom /> > MapGridRoom displays room symbol 1`] = `
<div>
  <div
    class="sc-beySPh eZCKBQ"
  />
</div>
`;

exports[`<MapGridRoom /> > MapGridRoom displays room symbol 2`] = `
<div>
  <div
    class="sc-beySPh eZCKBQ"
  >
    <div
      class="sc-guDLey LVYym"
    />
  </div>
</div>
`;

exports[`<MapGridRoom /> > MapGridRoom displays room symbol 3`] = `
<div>
  <div
    class="sc-beySPh eZCKBQ"
  >
    <div
      class="line-northwest-wrapper"
    >
      <div
        class="line line-northwest"
      />
    </div>
    <div
      class="line-northeast-wrapper"
    >
      <div
        class="line line-northeast"
      />
    </div>
    <div
      class="line-southwest-wrapper"
    >
      <div
        class="line line-southwest"
      />
    </div>
    <div
      class="line-southeast-wrapper"
    >
      <div
        class="line line-southeast"
      />
    </div>
    <div
      class="line line-north"
    />
    <div
      class="line line-south"
    />
    <div
      class="line line-west"
    />
    <div
      class="line line-east"
    />
  </div>
</div>
`;

exports[`<MapGridRoom /> > MapGridRoom displays room symbol 4`] = `
<div>
  <div
    class="sc-beySPh eZCKBQ"
  >
    <div
      class="line-northwest-wrapper"
    >
      <div
        class="line line-northwest"
      />
    </div>
    <div
      class="line-northeast-wrapper"
    >
      <div
        class="line line-northeast"
      />
    </div>
    <div
      class="line-southwest-wrapper"
    >
      <div
        class="line line-southwest"
      />
    </div>
    <div
      class="line-southeast-wrapper"
    >
      <div
        class="line line-southeast"
      />
    </div>
    <div
      class="line line-north"
    />
    <div
      class="line line-south"
    />
    <div
      class="line line-west"
    />
    <div
      class="line line-east"
    />
    <div
      class="sc-guDLey LVYym"
    />
  </div>
</div>
`;
